--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "docker:build": "docker build . -t scartech70/armory-ui",
+    "docker:publish": "docker push scartech70/armory-ui"
   },
   "eslintConfig": {
     "extends": [
