--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.2",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
+    "pubsub-js": "^1.9.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.1",
