--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pubsub-js": "^1.9.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-gallery-carousel": "^0.2.4",
     "react-router-dom": "^5.2.1",
     "react-scripts": "^4.0.3",
     "web-vitals": "^1.0.1"
