Lots of eslint fixes

--- a/package.json
+++ b/package.json
@@ -13,12 +13,20 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.2",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.25.3",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
+    "prop-types": "^15.7.2",
     "pubsub-js": "^1.9.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-gallery-carousel": "^0.2.4",
+    "react-router": "^5.2.1",
     "react-router-dom": "^5.2.1",
     "react-scripts": "^4.0.3",
     "web-vitals": "^1.0.1"
@@ -28,6 +36,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "lint": "eslint --ext .js,.jsx src",
     "docker:build": "docker build . -t scartech70/armory-ui",
     "docker:publish": "docker push scartech70/armory-ui"
   },
