Changed travis to use the Partner Queue Solution

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: node_js
-os:
-  - linux
-dist: xenial
+os: linux
+arch:
+  - arm64
+  - ppc64le
+  - s390x
 branches:
   only:
     - main
