--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
 language: node_js
-os: linux
-arch:
-  - arm64
-  - ppc64le
-  - s390x
+os:
+  - linux
+dist: xenial
 branches:
   only:
     - main
