--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,5 +8,4 @@ jobs:
     - name: Install modules
       run: yarn
     - name: Run ESLint
-      run eslint --ext .js,.jsx src
-    
+      run: eslint --ext .js,.jsx src
