--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: Linter
+name: CI
 on: push
 jobs:
   build:
@@ -8,4 +8,4 @@ jobs:
     - name: Install modules
       run: yarn
     - name: Run ESLint
-      run: eslint --ext .js,.jsx src
+      run: eslint . --ext .js,.jsx,.ts,.tsx
