--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,7 @@ on: push
 
 jobs:
   lint:
+    name: ESLint
     runs-on: ubuntu-latest
     
     steps:
@@ -15,6 +16,8 @@ jobs:
     - name: Run ESLint
       run: yarn run eslint . --ext .js,.jsx,.ts,.tsx
   docker:
+    name: Publish to Docker Hub
+    needs: lint
     runs-on: ubuntu-latest
     steps:
       -
