--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@date-io/moment": "^2.11.0",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@inovua/reactdatagrid-community": "^4.1.30",
     "@mui/icons-material": "^5.0.3",
     "@mui/lab": "^5.0.0-alpha.50",
     "@mui/material": "^5.0.3",
