--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@inovua/reactdatagrid-community": "^4.1.30",
+    "@mdi/font": "^6.3.95",
+    "@mdi/js": "^6.3.95",
+    "@mdi/react": "^1.5.0",
     "@mui/icons-material": "^5.0.3",
     "@mui/lab": "^5.0.0-alpha.50",
     "@mui/material": "^5.0.3",
