--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "prop-types": "^15.7.2",
     "pubsub-js": "^1.9.3",
     "react": "^17.0.2",
+    "react-csv": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-gallery-carousel": "^0.2.4",
     "react-router": "^5.2.1",
