--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-router": "^5.2.1",
     "react-router-dom": "^5.2.1",
     "react-scripts": "^4.0.3",
+    "recharts": "^2.1.5",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
