--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-router-dom": "^5.2.1",
     "react-scripts": "^4.0.3",
     "recharts": "^2.1.5",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
