--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "pubsub-js": "^1.9.3",
     "react": "^17.0.2",
     "react-csv": "^2.0.3",
+    "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-gallery-carousel": "^0.2.4",
     "react-router": "^5.2.1",
