--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "govicons": "^1.6.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
+    "passport-totp": "^0.0.2",
     "prop-types": "^15.7.2",
     "pubsub-js": "^1.9.3",
     "react": "^17.0.2",
@@ -36,10 +37,14 @@
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-gallery-carousel": "^0.2.4",
+    "react-input-mask": "^2.0.4",
+    "react-otp-input": "^2.4.0",
+    "react-qr-code": "^2.0.2",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.2.1",
     "react-scripts": "^4.0.3",
     "react-select-country-list": "^2.2.3",
+    "react-text-mask": "^5.4.3",
     "recharts": "^2.1.5",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
