Migrated to new data table

--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@date-io/moment": "^2.11.0",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
-    "@inovua/reactdatagrid-community": "^4.1.30",
     "@mdi/font": "^6.3.95",
     "@mdi/js": "^6.3.95",
     "@mdi/react": "^1.5.0",
@@ -29,12 +28,12 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "govicons": "^1.6.0",
     "jwt-decode": "^3.1.2",
-    "moment": "^2.29.1",
     "passport-totp": "^0.0.2",
     "prop-types": "^15.7.2",
     "pubsub-js": "^1.9.3",
     "react": "^17.0.2",
     "react-csv": "^2.0.3",
+    "react-data-table-component": "^7.4.5",
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-gallery-carousel": "^0.2.4",
@@ -45,6 +44,7 @@
     "react-scripts": "^4.0.3",
     "react-select-country-list": "^2.2.3",
     "recharts": "^2.1.5",
+    "styled-components": "^5.3.3",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
