--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "govicons": "^1.6.0",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
     "passport-totp": "^0.0.2",
     "prop-types": "^15.7.2",
     "pubsub-js": "^1.9.3",
