--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-gallery-carousel": "^0.2.4",
+    "react-icons": "^4.3.1",
     "react-otp-input": "^2.4.0",
     "react-qr-code": "^2.0.2",
     "react-router": "^5.2.1",
