--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "recharts": "^2.1.5",
     "styled-components": "^5.3.3",
     "uuid": "^8.3.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "zxcvbn": "^4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
